--- a/subir.html
+++ b/subir.html
@@ -2,24 +2,24 @@
 
     <article class="noticia">
         <div id="imagen" name="imagen" class="imagen"></div>
-        <div>
-            <input type="text" placeholder="Artista Nombre" value="pepe" name="nombreArtista" id="artistaInput" >
+        <div id="divDeSelects">
+            <input type="text" placeholder="Artista Nombre" name="nombreArtista" id="artistaInput" >
             <select name="artista" id="artista">
                 <option value="Nuevo">Nuevo</option>
             </select>
             <br>
             <br>
 
-            <input type="text" placeholder="Album Nuevo" value="album1" name="albumInput" id="albumInput">
+            <input type="text" placeholder="Album Nuevo"  name="albumInput" id="albumInput">
             <select name="albumSelect" id="albumSelect">
                 <option value="Nuevo">Nuevo</option>
             </select>
 
 
             <input type="date" name="fechaInput" id="fechaInput" value="2001-12-03">
-            <input type="text" name="descripcion" id="descripcion" aria-placeholder="descripcion" value="descr">
+            <input type="text" name="descripcion" id="descripcion" aria-placeholder="descripcion" placeholder="Descripción">
+            <br><br>
             <input type="file"  id="canciones" multiple>
-            <!-- <input type="file" name="cancion[]" id="canciones" multiple> -->
         </div>
     </article>
     <table id="tabla">
